[gd_scene load_steps=8 format=3 uid="uid://dk60gs2hajwx7"]

[ext_resource type="Script" path="res://scripts/pressure_plate.gd" id="1_nvj8k"]
[ext_resource type="Texture2D" uid="uid://bd7rabe6x0i6w" path="res://assets/button.png" id="2_l2fwf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7slip"]
size = Vector2(12, 3.875)

[sub_resource type="AtlasTexture" id="AtlasTexture_css2q"]
atlas = ExtResource("2_l2fwf")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ue57v"]
atlas = ExtResource("2_l2fwf")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_3r6q6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_css2q")
}],
"loop": true,
"name": &"Off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ue57v")
}],
"loop": true,
"name": &"On",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0dqlv"]
size = Vector2(16, 6)

[node name="Pressure_Plate" type="Node2D"]
scale = Vector2(8, 8)
script = ExtResource("1_nvj8k")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -0.0625)
shape = SubResource("RectangleShape2D_7slip")

[node name="plate_sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3r6q6")
animation = &"Off"

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_0dqlv")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
